get mqtt settings from env as fallback to commandline

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,39 @@
+# Database connection
 DATABASE_URL="mysql://root@localhost:3306/meshtastic-map?connection_limit=100"
+
+# MQTT Connection Settings
+# MQTT_BROKER_URL="mqtt://mqtt.meshtastic.org"
+# MQTT_USERNAME="meshdev"
+# MQTT_PASSWORD="large4cats"
+# MQTT_CLIENT_ID="your-client-id"
+# MQTT_TOPIC="msh/#"
+
+# MQTT Processing Options
+# ALLOWED_PORTNUMS="1,3,4,8,67,70,71,73"
+# LOG_UNKNOWN_PORTNUMS="false"
+# COLLECT_SERVICE_ENVELOPES="false"
+# COLLECT_POSITIONS="false"
+# COLLECT_TEXT_MESSAGES="false"
+# IGNORE_DIRECT_MESSAGES="false"
+# COLLECT_WAYPOINTS="false"
+# COLLECT_NEIGHBOUR_INFO="false"
+# COLLECT_MAP_REPORTS="false"
+# DECRYPTION_KEYS="1PG7OiApB1nwvP+rz05pAQ=="
+# DROP_PACKETS_NOT_OK_TO_MQTT="false"
+# DROP_PORTNUMS_WITHOUT_BITFIELD="1,3,4"
+# OLD_FIRMWARE_POSITION_PRECISION="7"
+# FORGET_OUTDATED_NODE_POSITIONS_AFTER_SECONDS="86400"
+
+# Database Purge Settings
+# PURGE_INTERVAL_SECONDS="10"
+# PURGE_NODES_UNHEARD_FOR_SECONDS="2592000"
+# PURGE_DEVICE_METRICS_AFTER_SECONDS="2592000"
+# PURGE_ENVIRONMENT_METRICS_AFTER_SECONDS="2592000"
+# PURGE_MAP_REPORTS_AFTER_SECONDS="2592000"
+# PURGE_NEIGHBOUR_INFOS_AFTER_SECONDS="2592000"
+# PURGE_POWER_METRICS_AFTER_SECONDS="2592000"
+# PURGE_POSITIONS_AFTER_SECONDS="2592000"
+# PURGE_SERVICE_ENVELOPES_AFTER_SECONDS="2592000"
+# PURGE_TEXT_MESSAGES_AFTER_SECONDS="2592000"
+# PURGE_TRACEROUTES_AFTER_SECONDS="2592000"
+# PURGE_WAYPOINTS_AFTER_SECONDS="2592000"
