--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "command-line-args": "^5.2.1",
     "command-line-usage": "^7.0.1",
     "compression": "^1.7.4",
+    "dotenv": "^16.4.7",
     "express": "^4.18.3",
     "mqtt": "^5.3.6",
     "protobufjs": "^7.2.6"
